--- a/dockerfile-arm
+++ b/dockerfile-arm
@@ -12,7 +12,7 @@
 
 FROM arm32v6/alpine
 
-COPY ./couch-db-repl-arm ./couch-db
+COPY ./couch-db-repl-arm ./couch-db-repl
 
-ENTRYPOINT [ "./couchdb" ] 
+ENTRYPOINT [ "./couch-db-repl" ] 
 
