--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     couch-db-repl:
-        image: byuoitav/rpi-couch-db-repl:DEVELOPMENT_HOSTNAME
+        image: byuoitav/rpi-couch-db-repl:devleopment
         ports:
             - "7012:7012"
         environment:
